app/styles/Profile.css
/* idcard */
.idcard {
  position: relative;
  border-radius:.25rem;
  border: .0625rem solid rgba(229,229,229,1);
}
.idcard-blockchainid:before {
  position: absolute;
  margin-top: 0;
  content: "+";
  font-size: 0.775rem;
}

.idcard-blockchainid {
  margin-bottom: 20px;
}
.idcard-blockchainid > h4 {
  display: block;
  padding-left: 12px;
  font-size: 0.875rem;
}

/* idcard specifics */

.id-flex img {
  width: 317px;
  height: 473px;
  object-fit: cover;
  margin: 0 10px;
  bottom: 0;
  -webkit-border-radius: 8px;
  border-radius: 8px;
}

.id-flex {
  display: table-cell;
  vertical-align: top;
  bottom: 0;
  width: 317px;
  height: 473px;
  margin:0 10px;
}
ul {
  padding: 0;
}

.idcard-block {
  display: table-cell;
  vertical-align: top;
  width: 100%;
}

.idcard-block > p {/*font-size:0.875rem;*/}

.idcard-name {
  font-size: 1.25em;
  text-align: left;
  margin-bottom: 5px;
}

.id-social > div > ul {
  list-style: none;
  height: 39px;
  margin-top: 5px;
  margin-bottom: 5px;
  margin-left: 15px;
}

.id-social > div > ul > li a {
  vertical-align:middle;
  overflow:hidden;
  text-overflow:ellipsis;
  white-space:nowrap;
  color:rgba(255,255,255,1);
  line-height: 32px;
  height: 32px;
  padding-left: 10px;
}
i.fa {
  display: inline-block;
  font-size: 16px;
  text-align: right;
  padding: 8px;
  margin-top: 3px;
  margin-right: 5px;
  margin-left: 5px;
}
.id-social > div > ul > li a > span {padding-left:5px; font-size:0.812rem;}

.idcard-wrap {
  padding: 10px 30px;
  position: absolute;
  top: 355px;
  color: rgba(255,255,255,1);
  font-weight: inherit;
}

.overlay {
  background-color: rgba(0,0,0,0.2);
  position: absolute;
  width: 317px;
  height: 473px;
  -webkit-border-radius: 8px;
  border-radius: 8px;
  margin:-473px 10px 10px 10px;
}

/* guy build */
body {
  background-color: rgba(255,255,255,1);
}
.navbar {
  background-color: rgba(235,235,235,1);
  height: 70px;
  border-bottom: solid 1px rgba(225,225,225,1);
}
  /****** custom element ***************************************/
  .nav-page {
    background-color: transparent;
    border: none;
  }
input[type=text]{
  border-radius: 20px;
}
.t-left {
  float: left;
}
.t-right {
  float: right;
}
.nav-search {
  overflow: hidden;
}

